z-index fix

--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -95,6 +95,7 @@ input.transparent{
   background-color: #111;
   max-height: 300px;
   overflow-y: auto;
+  z-index: 999;
   
   display: flex;
   flex-direction: column;
